ENIFI-333: open access to java.base/java.net for unnamed modules