@@ -1273,6 +1273,7 @@ public class RunNiFi {
         cmd.add("-Dapp=NiFi");
         cmd.add("-Dorg.apache.nifi.bootstrap.config.log.dir=" + nifiLogDir);
         cmd.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        cmd.add("--add-opens=java.base/java.net=ALL-UNNAMED");
         cmd.add("org.apache.nifi.NiFi");
         if (isSensitiveKeyPresent(props)) {
             Path sensitiveKeyFile = createSensitiveKeyFile(confDir);
